--- a/app/index.html
+++ b/app/index.html
@@ -29,103 +29,24 @@
     </div>
 
     <div class="row">
-      <div class="columns large-12">
+      <div class="columns large-12 medium-padding">
         <h1 class="wordmark">Albatross Digital</h1>
       </div>
     </div>
 
-    <div class="row">
-      <div class="columns large-12">
-        <h2 class="tagline">Design &amp; Development</h2>
-      </div>
-    </div>
-
-    <div class="row small-padding">
-      <div class="columns large-12">
-        <img src="images/ocean.jpg">
-      </div>
-    </div>
-
-    <div class="row small-padding">
-      <div class="columns large-6 small-padding">
-        <h3>Virginia Law Review</h3>
-      </div>
-    </div>
-
-
-    <div class="row large-padding">
-      <div class="columns large-6 small-padding">
-        <h5>Virginia Law Review</h5>
-        <h1 class="uva"><a>100 Years of Excellence</a></h1>
-      </div>
-    </div>
-
-
-
 
     <div class="row medium-padding">
-      <div class="columns medium-6 large-6">
-
-        <div class="row">
-          <div class="columns large-12">
-            <div class="menu-teaser">
-              <div class="row">
-                <div class="columns large-12">
-                  <h3><a>Projects</a></h3>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="columns large-12">
-            <div class="menu-teaser">
-              <div class="row">
-                <div class="columns large-10 end">
-                  <h3><a>Notes</a></h3>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
+      <div class="columns medium-12 large-6 small-padding">
+        <img src="images/owwl1.png">
       </div>
-
-      <div class="columns medium-6 large-6">
-
-        <div class="row">
-          <div class="columns large-12">
-            <div class="menu-teaser">
-              <div class="row">
-                <div class="columns large-12">
-                  <h3><a>About</a></h3>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="columns large-12">
-            <div class="menu-teaser">
-              <div class="row">
-                <div class="columns large-10 end">
-                  <h3><a>Contact</a></h3>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
+        <div class="columns medium-12 large-6">
+        <h1><a>Connecting 42 Libraries in Upstate New York</a></h1>
+        <h1>&middot;&emsp;<a>&middot;</a>&emsp;<a>&middot;</a>&emsp;</h1>
       </div>
     </div>
 
 
 
-
-
-
-
-    <!-- menu
     <div class="row medium-padding">
       <div class="columns medium-6 large-6">
 
