--- a/app/tacoma.html
+++ b/app/tacoma.html
@@ -37,7 +37,7 @@
     </div>
 
     <div class="row">
-      <div class="columns large-12">
+      <div class="columns large-12 medium-padding">
         <h2>The Ease of Doing Business</h2>
       </div>
     </div>
