--- a/app/about.html
+++ b/app/about.html
@@ -35,7 +35,7 @@
     </div>
 
     <div class="row">
-      <div class="columns large-12">
+      <div class="columns large-12 medium-padding">
         <h2>We build websites, design identities and solve problems</h2>
       </div>
     </div>
@@ -84,7 +84,7 @@
       
         <div class="row">
           <div class="columns large-12">
-            <h3>Capabilities</h3>
+            <h3>Disciplines</h3>
           </div>
         </div>
 
@@ -150,7 +150,7 @@
                 <div class="columns medium-8 large-8">
                   <h3><a>Jeff Lyon</a></h3>
                   <h5>Developer</h5>
-                  <p>&mdash;Finds elegant solutions to complex functionality, workflow, and server architecture challenges</p>
+                  <p>&mdash;Finds elegant solutions to complex functionality, workflow and server architecture challenges</p>
                 </div>
               </div>
             </div>
@@ -167,7 +167,7 @@
                 <div class="columns medium-8 large-8">
                   <h3><a>Shawn Maloney</a></h3>
                   <h5>Designer</h5>
-                  <p>&mdash;Creates design systems, champions simplicity, and pursues lasting concepts.</p>
+                  <p>&mdash;Designs systems, champions simplicity and pursues concepts that create affection</p>
                 </div>
               </div>
             </div>
@@ -181,7 +181,7 @@
                 <div class="columns medium-8 large-8">
                   <h3><a>Alex Schmoe</a></h3>
                   <h5>Developer</h5>
-                  <p>&mdash;Bridges design and development while constantly acquiring new skills for practical digital application</p>
+                  <p>&mdash;Bridges design and development while exploring emerging trends and technologies</p>
                 </div>
               </div>
             </div>
@@ -191,7 +191,7 @@
     </div>
 
 
-    <div class="row medium-padding">
+    <div class="row">
       <div class="columns large-12">
 
         <div class="row">
@@ -201,7 +201,10 @@
           </div>
           <div class="columns large-12">
             <div class="row">
-              <div class="columns large-12">
+              <div class="columns small-1 medium-1 large-1">
+                <h1 class="quote-mark">&ldquo;</h1>
+              </div>
+              <div class="columns small-12 medium-11 large-11">
                 <h3 class="quote"><a>An albatross is an art deco bird, striking of pattern, clean of line, epic in travels, heroically faithful.</a></h3>
                 <h5>&mdash;Carl Safina, <a>National Geographic</a></h5>
               </div>
@@ -224,7 +227,7 @@
             <h5>Contact</h5>
           </div>
           <div class="columns small-12 large-8">
-            <p>(917) 873 4666<br><a>hello@albatrossdigital.com</a></p>
+            <p>(917) 873 4666<br><a>contact@albatrossdigital.com</a></p>
           </div>
         </div>
       </div>
