--- a/app/menu.html
+++ b/app/menu.html
@@ -17,7 +17,7 @@
     <script src="bower_components/modernizr/modernizr.js"></script>
     <!-- endbuild -->
   </head>
-  <body class="full-bg">
+  <body>
 
     <div class="row">
       <div class="columns small-4 large-6 transparent-logo">
@@ -77,13 +77,6 @@
                 </div>
               </div>
             </div>
-          </div>
-        </div>
-
-        <div class="row footer">
-
-          <div class="columns small-12 large-12">
-            <p><a>(917) 873 4666</a><br><a>hello@albatrossdigital.com</a></p>
           </div>
         </div>
       </div>
