--- a/app/note.html
+++ b/app/note.html
@@ -37,7 +37,7 @@
     </div>
 
     <div class="row">
-        <div class="columns large-10">
+        <div class="columns large-10 medium-padding">
             <h2>by Jeff Lyon / May 30 2014</h2>
         </div>
     </div>
