--- a/app/projects.html
+++ b/app/projects.html
@@ -36,7 +36,7 @@
       </div>
     </div>
     <div class="row">
-      <div class="columns large-12">
+      <div class="columns large-12 small-padding">
         <h2><a>All +</a></h2>
       </div>
     </div>
